chore: fix border z-index

--- a/src/components/list/z-list-element/styles.css
+++ b/src/components/list/z-list-element/styles.css
@@ -103,4 +103,5 @@
 :host .z-tree-list-divider {
   position: absolute;
   left: 0;
+  z-index: 100;
 }
